--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script type="text/ng-template" id="todomvc-index.html">
 			<section id="todoapp">
 				<header id="header">
-					<h1>awesome list</h1>
+					<h1>awesome list2</h1>
 					<form id="todo-form" ng-submit="addTodo()">
 						<input id="new-todo" placeholder="How to be awesome" ng-model="newTodo" ng-disabled="saving" autofocus>
 					</form>
